<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Titulo -->
        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayuda"
            android:textSize="35sp"
            android:typeface="normal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/queja"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:typeface="normal" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:text="@string/preguntafrecuente"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:typeface="normal" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:text="@string/seguridad"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:typeface="normal" />


    </LinearLayout>
</ScrollView>
