<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <!-- Contenedor de título -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_pedido"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="150dp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp" />
    </LinearLayout>

    <!-- Contenedor de precio -->
    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <!-- Contenedor de fecha -->
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="14sp"

        android:textColor="@color/black"
        android:gravity="center_horizontal" />
</LinearLayout>
